--- a/package.json
+++ b/package.json
@@ -10,9 +10,23 @@
         "production": "mix --production"
     },
     "devDependencies": {
+        "@vue/compiler-sfc": "^3.0.5",
         "axios": "^0.21",
-        "laravel-mix": "^6.0.6",
+        "bootstrap": "^4.0.0",
+        "jquery": "^3.2",
+        "laravel-mix": "^6.0.0-beta.17",
         "lodash": "^4.17.19",
-        "postcss": "^8.1.14"
+        "popper.js": "^1.12",
+        "postcss": "^8.1.14",
+        "resolve-url-loader": "^2.3.1",
+        "sass": "^1.20.1",
+        "sass-loader": "^8.0.0",
+        "vue": "^3.0.5",
+        "vue-loader": "^16.1.2",
+        "vue-router": "^4.0.4",
+        "vue-template-compiler": "^2.6.10"
+    },
+    "dependencies": {
+        "element-plus": "^1.0.2-beta.32"
     }
 }
